first page completed

--- a/index.html
+++ b/index.html
@@ -81,58 +81,121 @@
                 <div class="col-4"><h2>New questions</h2></div>
                 <div class="col"><a href ="#">Hot questions</a></div>
         </div>
-        <div class="row question">
-          <div class="col-3">
-            <img class = "avatar" src="static/img/Avatar №1.jpg" alt="">
-
-          </div>  
-          <div class="col-9">
-            <h3><a href ="#">Question 1</a></h3>
-            Lorem ipsum dolor sit amet consectetur, 
-            adipisicing elit. Recusandae placeat,
-             accusantium voluptas dignissimos ullam 
-             voluptates optio perspiciatis nulla officia 
-             praesentium quasi. Corporis praesentium odio 
-             excepturi necessitatibus in hic voluptates 
-             iure!
-          </div> 
+        <div class="row container-fluid question">
+          <div class="row">
+                <div class="col-3">
+                        <img class = "avatar" src="static/img/Avatar №1.jpg" alt="">
+                </div>  
+                <div class="col-9">
+                <h3><a href ="#">How to destroy Thanos?</a></h3>
+                Guys, Thanos wants to take over my planet, 
+                I have never encountered this problem. 
+                Can you please tell me where can I get the team in order to defeat him?
+                </div> 
+          </div>
+          <div class="row">
+                  <div class="col">
+                          <b class="likes_counter">5</b>
+                          <img class ="estimate" src="static/img/like button (off).png" alt="">
+                          <img class ="estimate" src="static/img/dislike button (off).png" alt="">
+                  </div>
+                  <a class="col" href = "#">answers(3)</a>
+                  <div class="col">
+                          Tags:
+                          <a href="#">superhero</a>
+                          <a href="#">Thanos</a>
+                  </div>
+          </div>
         </div>
-        <div class="row question">
-          <div class="col-3">
-            <img class = "avatar" src="static/img/Avatar №1.jpg" alt="">
-
-          </div>  
-          <div class="col-9">
-            <h3>Question 2</h3>
-            Lorem ipsum dolor sit amet consectetur, 
-            adipisicing elit. Recusandae placeat,
-             accusantium voluptas dignissimos ullam 
-             voluptates optio perspiciatis nulla officia 
-             praesentium quasi. Corporis praesentium odio 
-             excepturi necessitatibus in hic voluptates 
-             iure!
-          </div> 
+        <div class="row container-fluid question">
+                <div class="row">
+                      <div class="col-3">
+                              <img class = "avatar" src="static/img/Avatar №1.jpg" alt="">
+                      </div>  
+                      <div class="col-9">
+                      <h3><a href ="#">How to destroy Thanos?</a></h3>
+                      Guys, Thanos wants to take over my planet, 
+                      I have never encountered this problem. 
+                      Can you please tell me where can I get the team in order to defeat him?
+                      </div> 
+                </div>
+                <div class="row">
+                        <div class="col">
+                                <b class="likes_counter">5</b>
+                                <img class ="estimate" src="static/img/like button (off).png" alt="">
+                                <img class ="estimate" src="static/img/dislike button (off).png" alt="">
+                        </div>
+                        <a class="col" href = "#">answers(3)</a>
+                        <div class="col">
+                                Tags:
+                                <a href="#">superhero</a>
+                                <a href="#">Thanos</a>
+                        </div>
+                </div>
         </div>
-        <div class="row question">
-          <div class="col-3">
-            <img class = "avatar" src="static/img/Avatar №1.jpg" alt="">
-
-          </div>  
-          <div class="col-9">
-            <h3>Question 3</h3>
-            Lorem ipsum dolor sit amet consectetur, 
-            adipisicing elit. Recusandae placeat,
-             accusantium voluptas dignissimos ullam 
-             voluptates optio perspiciatis nulla officia 
-             praesentium quasi. Corporis praesentium odio 
-             excepturi necessitatibus in hic voluptates 
-             iure!
-          </div> 
+        <div class="row container-fluid question">
+                <div class="row">
+                      <div class="col-3">
+                              <img class = "avatar" src="static/img/Avatar №1.jpg" alt="">
+                      </div>  
+                      <div class="col-9">
+                      <h3><a href ="#">How to destroy Thanos?</a></h3>
+                      Guys, Thanos wants to take over my planet, 
+                      I have never encountered this problem. 
+                      Can you please tell me where can I get the team in order to defeat him?
+                      </div> 
+                </div>
+                <div class="row">
+                        <div class="col">
+                                <b class="likes_counter">5</b>
+                                <img class ="estimate" src="static/img/like button (off).png" alt="">
+                                <img class ="estimate" src="static/img/dislike button (off).png" alt="">
+                        </div>
+                        <a class="col" href = "#">answers(3)</a>
+                        <div class="col">
+                                Tags:
+                                <a href="#">superhero</a>
+                                <a href="#">Thanos</a>
+                        </div>
+                </div>
         </div>
+        <span class="row">
+                <div class="cool-3">
+                        <span class="pages">&#160 1 &#160</span>
+                        <span class="pages">&#160 2 &#160</span>
+                        <span class="pages">&#160 3 &#160</span>
+                        <span class="pages">&#160 ... &#160</span>
+                        <span class="pages">&#160 53 &#160</span>
+                </div>
+        </span>
+
+
+
       </div>
-      <div class="col-3"> 
-        <h2>Popular tags</h2>
-      </div>
+      <span class="col-3 container-fluid Popular_tags"> 
+        <h2 class="row">Popular tags</h2>
+        <div class="row">
+                <a class="col" href="#">perl</a>
+                <a class="col red_tag" href="#">python</a>
+                <a class="col" href="#">TechnoPark</a>
+        </div>
+        <div class="row">
+                <a class="col red_tag" href="#">MySQL</a>
+                <a class="col green_tag"href="#">django</a>
+                <a class="col" href="#">Mail.Ru</a>
+        </div>
+        <div class="row">
+                <a class="col" href="#">Voloshin</a>
+                <a class="col orange_tag"href="#">Firefox</a>
+        </div>
+        <h2 class="row">Best Members</h2>
+        <a href="#" class="row member_list">Steve Rogers</a>
+        <a href="#" class="row member_list">Tony Stark</a>
+        <a href="#" class="row member_list">Thor Odinson</a>
+        <a href="#" class="row member_list">Bruce Banner</a>
+        <a href="#" class="row member_list">Natasha Romanoff</a>
+        <a href="#" class="row member_list">Clint Barton</a>
+      </span>
 
     </div>
 
@@ -141,7 +204,7 @@
 
 <footer class="footer mt-auto py-3 bg-light">
   <div class="container">
-    <span class="text-muted">Place sticky footer content here.</span>
+    <!-- <span class="text-muted">Place sticky footer content here.</span>  -->
   </div>
 </footer>
 
